<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_272727"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cover"
            android:contentDescription="@string/cover"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:src="@drawable/cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            app:layout_constraintTop_toBottomOf="@id/cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_extrabold"
                android:text="@string/elden_ring"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"/>
            <TextView
                android:id="@+id/tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2022_02_25"
                android:textColor="@color/white"
                android:fontFamily="@font/inter"
                android:textSize="16sp"
                android:layout_below="@id/judul"
                android:layout_alignParentStart="true"/>

            <ImageView
                android:id="@+id/star"
                android:contentDescription="@string/star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_toStartOf="@id/rating"
                android:src="@drawable/star" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4_4"
                android:fontFamily="@font/inter"
                android:textSize="16sp"
                android:textColor="@color/custom_FDF42B"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/genre"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="25dp"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action"
                android:textColor="@color/white"
                android:fontFamily="@font/inter"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rpg"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/inter"
                android:layout_marginHorizontal="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/about"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="25dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_game"
                android:textColor="@color/white"
                android:fontFamily="@font/inter"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_game_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/inter"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/developer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="25dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_extrabold"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fromsoftware"
                android:textColor="@color/teal_200"
                android:textSize="16sp"
                android:textStyle="italic"
                android:fontFamily="@font/inter"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Publisher"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="25dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/developer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publisher"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_extrabold"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bandai_namco_entertainment"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="italic"
                android:fontFamily="@font/inter"
                android:layout_marginTop="5dp"/>
        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Publisher">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:orientation="horizontal"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                tools:listitem="@layout/list_preview">

            </androidx.recyclerview.widget.RecyclerView>
        </HorizontalScrollView>
        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginVertical="25dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/add_to_favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>